# py-cv

./: .gitignore  README.md  pyproject.toml
bookmark/: pdf_add_bookmark.py
extractGIF/: extractGIF.py  find_and_remove_duplicates.py
ocr/: pdf_add_orc.py
